--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=nhadattv
+DB_HOST=10.90.199.113
+DB_PORT=3307
+DB_DATABASE=vnptpayc
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=lovebxTuyen@123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
