--- a/.env
+++ b/.env
@@ -25,9 +25,9 @@ REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_PORT=25
+MAIL_USERNAME=p.thanhit@gmail.com
+MAIL_PASSWORD=lovebxTuyen@123
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
