--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=nhadattv
+DB_HOST=10.90.199.89
+DB_PORT=3307
+DB_DATABASE=vnptpayc
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=Vnpt@123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -25,9 +25,9 @@ REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_PORT=25
+MAIL_USERNAME=p.thanhit@gmail.com
+MAIL_PASSWORD=lovebxTuyen@123
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
