--- a/.htaccess
+++ b/.htaccess
@@ -4,11 +4,9 @@
     </IfModule>
 
     RewriteEngine On
-    
 
-    # Handle Authorization Header
-    RewriteCond %{HTTPS:Authorization} .
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTPS:Authorization}]
+RewriteCond %{HTTPS} !on
+RewriteRule ^.*$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
