PVT - Thêm chức năng switch user

--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=25
 MAIL_USERNAME=p.thanhit@gmail.com
-MAIL_PASSWORD=lovebxTuyen@123
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
